# candela

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile  README.md  alembic.ini  candela-project-plan.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
candela/: auth.py  config.py  db.py  main.py
candela/api/: loads.py  readings.py  summary.py  tariffs.py
candela/collector/: aemo.py  backfill.py  inverter.py  isolarcloud.py  poller.py
candela/disaggregation/: detector.py  models.py  reconciler.py
candela/tariffs/: engine.py  load_costs.py  models.py  seed.py
candela/tariffs/strategies/: base.py  demand.py  single_rate.py  tou.py  wholesale.py
candela/web/: routes.py
candela/web/static/: candela.css  logo-preview.html
candela/web/templates/: base.html  compare.html  dashboard.html  history.html  loads.html  login.html  plans.html
candela/web/templates/partials/: compare_results.html  daily_chart.html  status.html  today_summary.html  wholesale_price.html
migrations/: env.py
migrations/versions/: 0001_solar_readings.py  0002_tariff_engine.py  0003_load_disaggregation.py  0004_current_plan_periods.py
quadlet/: candela-collector.container  candela-web.container
tests/: conftest.py  test_aemo.py  test_api_loads.py  test_api_readings.py  test_api_summary.py  test_api_tariffs.py  test_backfill.py  test_config.py  test_db.py  test_disaggregation.py  test_inverter.py  test_isolarcloud.py  test_load_costs.py  test_poller.py  test_tariff_engine.py  test_tariff_strategies.py  test_web_routes.py
