[project]
name = "candela"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "itsdangerous>=2.2.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "prek>=0.3.8",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["candela"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.coverage.run]
source = ["candela"]
omit = ["tests/*"]
